# CCwcs

./: AUTHORS  Makefile.am  README  README.md  configure.ac
CCwcs/: Makefile.am  WcsHandler.cxx  WcsHandler.h  WscHandler.cxx  WscHandler.h  main.cpp
CCwcs.xcodeproj/: project.pbxproj
CCwcs.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CCwcs.xcodeproj/xcuserdata/joshcardenzana.xcuserdatad/xcschemes/: CCwcs.xcscheme  xcschememanagement.plist
